--- a/index.html
+++ b/index.html
@@ -31,16 +31,30 @@
 
 </head>
 <body>
+  
+  <div class= "row">
+    <p class= "four columns"> A bagel (also spelled beigel)[1] is a bread product, traditionally shaped by hand into the form of a ring from yeasted wheat dough, roughly hand-sized, which is first boiled for a short time in water and then baked.[2] The result is a dense, chewy, doughy interior with a browned and sometimes crisp exterior. Bagels are often topped with seeds baked on the outer crust, with the traditional ones being poppy or sesame seeds. Some also may have salt sprinkled on their surface, and there are also a number of different dough types such as whole-grain or rye.[2]</p> 
+    <p class= "four columns"> A bagel (also spelled beigel)[1] is a bread product, traditionally shaped by hand into the form of a ring from yeasted wheat dough, roughly hand-sized, which is first boiled for a short time in water and then baked.[2] The result is a dense, chewy, doughy interior with a browned and sometimes crisp exterior. Bagels are often topped with seeds baked on the outer crust, with the traditional ones being poppy or sesame seeds. Some also may have salt sprinkled on their surface, and there are also a number of different dough types such as whole-grain or rye.[2]</p> 
+    <p class= "four columns"> A bagel (also spelled beigel)[1] is a bread product, traditionally shaped by hand into the form of a ring from yeasted wheat dough, roughly hand-sized, which is first boiled for a short time in water and then baked.[2] The result is a dense, chewy, doughy interior with a browned and sometimes crisp exterior. Bagels are often topped with seeds baked on the outer crust, with the traditional ones being poppy or sesame seeds. Some also may have salt sprinkled on their surface, and there are also a number of different dough types such as whole-grain or rye.[2]</p>
+  </div>
+
+  <div class= "six row columns">
+      <h1 class= "six apple columns"> MY FANCY TITLE </h1>
+        <p class= "boat six columns"> A bagel (also spelled beigel)[1] is a bread product, traditionally shaped by hand into the form of a ring from yeasted wheat dough, roughly hand-sized, which is first boiled for a short time in water and then baked.[2] The result is a dense, chewy, doughy interior with a browned and sometimes crisp exterior. Bagels are often topped with seeds baked on the outer crust, with the traditional ones being poppy or sesame seeds. Some also may have salt sprinkled on their surface, and there are also a number of different dough types such as whole-grain or rye.[2]</p>
+  </div>
 <div class="row"> 
-  <div class= "six columns end">
-    text
+  <div class= "six columns">
+   text
+
   </div>
 </div>
 <div class="row">
-  <div class= "three columns end">
+  <div class= "six columns">
     text 
+    <img src="http://placehold.it/500x500">
    </div>
   </div>  
+  
 
 </body>
 </html>
